--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "python-rtmidi>=1.5.8",
     "seaborn>=0.13.2",
+    "simpleaudio>=1.0.4",
 ]
 
 [tool.uv.sources]
