--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,21 +8,18 @@ dependencies = [
     "bs4>=0.0.2",
     "chime>=0.7.0",
     "colorama>=0.4.6",
-    "daniel-chin-python-alt-stdlib",
+    "daniel-chin-python-alt-stdlib[chime,colorama,crypto,ipykernel,ipython,keyboard,librosa,matplotlib,mido,mouse,numpy,pdfrw,pip,pretty-midi,psutil,pyaudio,pyfluidsynth,pyperclip,python-rtmidi,qrcode,rsa,scipy,simpleaudio,tqdm,pyserial]",
     "ipykernel>=6.30.1",
     "matplotlib>=3.10.6",
     "mido>=1.3.3",
     "openai>=1.102.0",
     "pingouin>=0.5.5",
-    "pretty-midi>=0.2.11",
     "psutil>=7.0.0",
     "pyaudio>=0.2.14",
     "pyqt5>=5.15.11",
     "python-dotenv>=1.1.1",
     "python-rtmidi>=1.5.8",
     "seaborn>=0.13.2",
-    "simpleaudio>=1.0.4",
-    "sounddevice>=0.5.5",
 ]
 
 [tool.uv.sources]
